# tn-data-jobs

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly_pipeline.yml
dashboard/: app.py
dbt/: dbt_project.yml
dbt/models/marts/: dim_companies.sql  dim_skills.sql  fct_postings.sql
dbt/models/staging/: stg_france_travail.sql  stg_tanitjobs.sql
docs/: architecture.md  weekly-notes.md
ingest/: bigquery_loader.py  france_travail.py  run.py  schemas.py  tanitjobs_scraper.py
notebooks/: 01_week1_exploration.ipynb
skills_taxonomy/: skills.yml
