[project]
name = "tn-data-jobs"
version = "0.1.0"
description = "Automated pipeline tracking data & AI job postings in Tunisia and France."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "pydantic>=2.7",
    "dbt-duckdb>=1.8",
    "duckdb>=0.10",
    "streamlit>=1.35",
    "pandas>=2.2",
    "plotly>=5.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
